# Phenoparser

./: AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
m4/: ax_with_tldevel.m4
scripts/: Makefile.am  README.md  acmg.py  build_gemini.sh  common.sh  create_all_variant_reports.sh  create_variant_report.sh  create_variant_reports.sh  gene_disease.py  get_gene_disease.py  load_docker_images.sh  make_extended_phenolyzer_database.sh  make_omim_database.sh  pipeline.org  report_V2_template.Rmd  report_V3_template.Rmd  run_pre_merge.sh  sng_config  tlbashlib.sh
src/: Makefile.am  main.c  misc.c  omimlist.c  parser.c  phenoparser.c  phenoparser.h  sqlite_database.c  user_interface.c
